--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 .logo {
   border-right: 2px solid grey;
+}
+header{
+  position: sticky;
+  top: 0px;
+  z-index: 100;
+  background-color: #ffffffff;
+  padding:10px 0px;
 }
 .header-body {
   font-weight: 800;
   font-size: 18px;
   margin-bottom: 6px;
+  width: 100%;
 }
+
 .header-p {
   font-size: 13px;
   font-weight: 400;
+  text-align: center;
 }
 input {
   background-color: #f8f8f8;
@@ -20,27 +31,42 @@ input {
   height: 46px;
   width: 40vw;
 }
-.my-container:hover {
-  background-color: #f8f8f8;
+#cart-icon{
+width:20px;
+height: 20px;
 }
 .my-img-container {
   overflow-x: scroll;
   width: 95%;
-  margin: auto;
 }
 .my-img-container > img {
   margin: 0px 10px;
 }
-.my-card-container{
-overflow-x: scroll;
-width: 95%;
-margin: auto;
+.section-3>div>img{
+  width: 128px;
+  height: 188;
+  object-fit: fill;
 }
-.my-card{
-    padding:20px;
-    width: 200px;
-    margin: 10px;
-    box-shadow: 1px 1px 6px #746866;
+.my-card-container {
+  overflow-x: scroll;
+  width: 90%;
+}
+h1{
+  margin-top: 30px;
+}
+.my-card {
+  padding: 20px;
+  width: 200px;
+  margin: 10px;
+  box-shadow: 1px 1px 6px #746866;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background-color: white;
+}
+.my-card>div>img{
+  width:140px;
+  height:140px;
+object-fit: fill;
 }
 .card-timer {
   text-transform: uppercase;
@@ -50,38 +76,79 @@ margin: auto;
   background-color: #f8f8f8;
   margin-bottom: 10px;
 }
-.my-card-body{
-    color: rgb(31, 31, 31);
-    font-weight: 600;
-    font-size: 13px;
-    margin-bottom: 10px
+.my-card-body {
+  color: rgb(31, 31, 31);
+  font-weight: 600;
+  font-size: 13px;
+  height: 25px;
+  margin-bottom: 10px;
 }
-.my-card-weight{
-    height: 13px;
-    margin-bottom: 20px;
-    color: #746866;
+.my-card-weight {
+  height: 13px;
+  margin-bottom: 20px;
+  color: #746866;
 }
-.my-button{
-    cursor: pointer;
-    width: 66px;
-    border: 1px solid rgb(49, 134, 22);
-    color: rgb(49, 134, 22);
-    font-weight: 600;
-    font-size: 13px;
-    font-family: Okra;
-    background-color: rgb(247, 255, 249);
-    border-radius: 0.375rem;
-    margin-left: 50px;
+.my-button {
+  cursor: pointer;
+  width: 66px;
+  border: 1px solid rgb(49, 134, 22);
+  color: rgb(49, 134, 22);
+  font-weight: 600;
+  font-size: 13px;
+  font-family: Okra;
+  background-color: rgb(247, 255, 249);
+  border-radius: 0.375rem;
+  margin-left: 50px;
 }
-tr>td>a{
-    text-decoration: none;
-    color: black;
+.footer-container{
+  margin: 80px 0px;
 }
-td{
-    padding: 20px;
+.footer-section1>div>ul>li>a,.footer-section2>div>ul>li>a{
+text-decoration: none;
+color: #666666ff;
 }
-table{
-    border-collapse: collapse;
+.footer-section1>div>ul,.footer-section2>div>ul{
+  list-style: none;
+}
+span>a{
+  text-decoration: none;
+  color: green;
+}
+#categories{
+  display: inline;
+}
+#last-footer-element{
+  color: #666666ff;
+}
+.svg-footer{
+  border-radius: 70px;
+}
+.second-section-footer{
+  color: #666666ff;
+}
+
+
+@media screen and (max-width: 769px) {
+  .my-container {
+    flex-direction: column;
+  }
+  .logo {
+    border: none;
+  }
+  .search-div {
     width: 100%;
-    text-align: left;
+  }
+  .footer-container{
+    flex-direction: column;
+  }
+  #div1-footer-section,#div2-footer-section{
+    margin: auto;
+  }
+  #footer-heading2,#footer-heading1{
+    text-align: center;
+  }
+  .second-section-footer{
+  flex-direction: column;
+  text-align: center;
+  }
 }
